@@ -1,16 +1,0 @@
-[ 'apt' ]
-[[ 'preferences' ]]
-[[ 'sources' ]]
-[[[ 'debian' ]]]
-description	= Debian GNU/Linux apt repository
-uri		= http://ftp.us.debian.org/debian/
-#cached_uri	= http://localhost:9999/debian/
-suite		= sid
-components	= main
-
-[[[ 'distro' ]]]
-description	= distro apt repository
-uri		= http://distro.com/debian/
-suite		= 
-components	= ?
-keyring		= distro-keyrings
