@@ -3,13 +3,14 @@ python-fll (0.9.0) UNRELEASED; urgency=low
   * Add fll shell wrapper and python program which uses the fll modules.
   * Add cmdline.py, main.py and config.py fll module skeletons.
   * Remove Makefile, leave build system to setup.py.
+  * Remove defunct test suite.
   * Build manual page for fll build tool dynamically via custom optparse
     help formatter and distutils build subcommand.
   * Clean up manual page with distutls clean subcommand.
   * Remove fll_detect_locale_pkgs and manpage, they are not used and
     fll.locales is pending overhaul.
 
- -- Kel Modderman <kel@otaku42.de>  Mon, 27 Dec 2010 12:54:26 +1000
+ -- Kel Modderman <kel@otaku42.de>  Mon, 27 Dec 2010 14:15:39 +1000
 
 python-fll (0.2.2) unstable; urgency=low
 
